# backend-service

./: .gitignore  LICENSE  docker-compose.yml  pyproject.toml
.run/: App.run.xml
docker/: postgres.conf  redis.conf
src/: main.py
src/api/: dependencies.py
src/api/routers/: __init__.py  root.py
src/core/: config.py  events.py  logger.py  paths.py  settings.py  toolkit.py
src/routers/: __init__.py  home.py  root.py
static/: style.css
templates/: home.html
